--- a/app/assets/stylesheets/components/_colors.scss
+++ b/app/assets/stylesheets/components/_colors.scss
@@ -33,3 +33,24 @@
 .c-yellow {
   color: $my-yellow;
 }
+
+.c-blue:hover {
+  color: $my-blue;
+}
+
+.c-red:hover  {
+  color: $my-red;
+}
+
+.c-white:hover  {
+  color: $my-white;
+}
+
+.c-black:hover  {
+  color: $my-black;
+}
+
+.c-yellow:hover  {
+  color: $my-yellow;
+}
+
